<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_event" />

        <item
            android:id="@+id/nav_company"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_company" />

        <item
            android:id="@+id/nav_department"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_department" />

        <item
            android:id="@+id/nav_mail"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_mail" />

        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_user" />

        <item
            android:id="@+id/nav_participation"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_participation" />

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_login" />
    </group>
</menu>